<resources>
    <string name="app_name">facebook-search-by_tag</string>
    <string name="facebook_app_id">151571115529419</string>
    <string name="fb_login_protocol_scheme">fb151571115529419</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag">Ваш TAG</string>
    <string name="start">Start</string>
    <string name="radius">Ваш радиус</string>
    <string name="text_gps">Введите координаты местонахождения или кликните на кнопку:</string>
    <string name="text_tag_radius">Введите какой то Тэг, например: cafe, coffee и Радиус:</string>
</resources>
