<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:padding="24dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="sans-serif-light"
        android:textSize="12sp"
        android:text="@string/text_gps"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp">

        <EditText
            android:id="@+id/edit_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="24dp"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/edit_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:inputType="numberDecimal"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fa_button"
            android:layout_width="48dp" android:layout_height="wrap_content"
            android:layout_marginRight="24dp" android:layout_marginLeft="12dp"
            android:layout_marginEnd="24dp" android:layout_marginStart="12dp"
            android:src="@drawable/ic_location"
            app:fabSize="normal"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_tag_radius"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="24dp" android:layout_marginTop="5dp" android:layout_marginRight="24dp"
            android:hint="@string/tag"/>

        <EditText
            android:id="@+id/edit_radius"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="5dp" android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:hint="@string/radius"
            android:layout_marginEnd="24dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_query"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/start"
            android:background="@color/accent"
            android:theme="@style/Platform.AppCompat"/>

    </LinearLayout>



</LinearLayout>